# caustics

./: .buildinfo  .codespell-whitelist  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  BasicIntroduction.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changes.md  InvertLensEquation.html  InvertLensEquation.ipynb  LICENSE  LensZoo.html  MultiplaneDemo.html  MultiplaneDemo.ipynb  README.md  VisualizeCaustics.html  caustics.data.html  caustics.html  caustics.lenses.html  caustics.light.html  caustics.sims.html  citation.html  contributing.html  genindex.html  getting_started.html  illustrative_examples.html  index.html  install.html  license.html  modules.html  noxfile.py  objects.inv  paper.bib  paper.md  phytorch_instructions.md  py-modindex.html  pyproject.toml  (+6 more)
.devcontainer/: Dockerfile  apt.txt  conda-requirements.txt  devcontainer.json  environment.yml  postBuild.sh  start
.devcontainer/cpu/: devcontainer.json
.doctrees/: BasicIntroduction.doctree  InvertLensEquation.doctree  LensZoo.doctree  MultiplaneDemo.doctree  VisualizeCaustics.doctree  caustics.data.doctree  caustics.doctree  caustics.lenses.doctree  caustics.light.doctree  caustics.sims.doctree  citation.doctree  contributing.doctree  environment.pickle  getting_started.doctree  illustrative_examples.doctree  index.doctree  install.doctree  license.doctree  modules.doctree  tutorials.doctree
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: cd.yml  (+6 more)
_modules/: index.html
_sources/: VisualizeCaustics.ipynb.txt  caustics.data.rst.txt  caustics.lenses.rst.txt  caustics.light.rst.txt  caustics.rst.txt  caustics.sims.rst.txt  contributing.rst.txt  index.rst.txt  license.rst.txt
caustic/: __init__.py  constants.py  cosmology.py  definitions.py  display_utils.py  forward_raytrace.py  namespace_dict.py  parameter.py  parametrized.py  simulator.py  utils.py
caustics/: __init__.py  parameter.py  parametrized.py  utils.py
dev_notes/: compareTNFW.ipynb
docs/: caustic.data.rst  caustic.lenses.rst  caustic.rst  caustic.sources.rst  citation.rst  conf.py  contributing.rst  getting_started.rst  illustrative_examples.rst  index.rst  install.rst  license.rst  modules.rst  pull_notebooks.py  requirements.txt  tutorials.rst
gui/: app_configs.py  streamlit_app.py  streamlit_app_basic.py
notebooks/: aa-01-sim_prototype.ipynb  aa-prototype-data-analysis.ipynb  ac-01-outline.ipynb  ac-03-prototyping.ipynb
scripts/: README.md  ac-01-dev.py  sersic_sie.py  test_kappa_grid.py
test/: README.md  parametrized.py  test_base.py  test_batching.py  test_cosmology.py  test_definitions.py  test_epl.py  test_external_shear.py  test_interpolate_image.py  test_jacobian_lens_equation.py  test_kappa_grid.py  test_masssheet.py  test_multiplane.py  test_multiplane_ls.py  test_multiplane_nfw.py  test_namespace_dict.py  test_nfw.py  test_parameter.py  test_parametrized.py  test_pixel_grid.py  test_pixelated.py  test_point.py  test_pseudo_jaffe.py  test_psf.py  test_sersic.py  test_sie.py  test_simulator.py  test_sis.py  test_tnfw.py  utils.py
tests/: conftest.py  test_angle_mixin.py  test_backends.py  test_base.py  test_batchedplane.py  test_batching.py  test_cosmology.py  test_enclosed_mass.py  test_epl.py  test_external_shear.py  test_interpolate_image.py  test_io.py  test_jacobian_lens_equation.py  test_kappa_grid.py  test_lens_potential.py  test_light_stack.py  test_masssheet.py  test_microlens_sim.py  test_multiplane.py  test_multipole.py  test_namespace_dict.py  test_nfw.py  test_notebooks.py  test_parameter.py  test_parametrized.py  test_pixel_grid.py  test_pixelated_deflection.py  test_pixelated_time.py  test_point.py  test_pseudo_jaffe.py  test_sersic.py  test_sie.py  test_simulator.py  test_simulator_runs.py  test_singleplane.py  test_sis.py  test_star_source.py  test_time_delay.py  test_tnfw.py  test_utils.py  (+1 more)
(+277 files in other folders)
