[project]
name = "caustic"
version = "0.4.3"
authors = [
    {name="Connor Stone", email="connorstone628@gmail.com"},
    {name="Adam Coogan", email="dr.adam.coogan@gmail.com"}
]
description = "The lensing pipeline of the future."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "gravitational lensing",
    "astrophysics",
    "differentiable programming",
    "pytorch",
]
dependencies = [
    "astropy",
    "graphviz",
    "h5py",
    "levmarq_torch",
    "numpy",
    "scipy",
    "torch",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "lenstronomy",
    "matplotlib",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/Ciela-Institute/caustic"
"Bug Tracker" = "https://github.com/Ciela-Institute/caustic"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
